--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>ola</h1>
+    <img src="./images/backend.png" alt="">
     <script src="./js/main.js"></script>
 </body>
 </html>
