--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,24 @@
             <p class="hero__text">
                 O maior evento de tecnologia do Brasil começa em 10d 12h 21m 15s
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Alianza parque - Barra funda - São Paulo
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Preço</b>
+                        A partir de R$ 120,00
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        23/03/2025 as 19hrs
+                    </li>
+                </ul>
+                <a class="button button--primary">Garanta a sua vaga</a>
+
+            </div>
         </div>
     </header>
     <script src="./js/main.js"></script>
