--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,15 @@
             </div>
         </div>
     </header>
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-End</h2>
+                <p class="event__details__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod iste quibusdam praesentium, aliquam perspiciatis enim repudiandae possimus eius minus et accusamus nisi cumque ea modi facere harum sunt quisquam! Aut?</p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="front-end">
+        </div>
+    </section>
     <script src="./js/main.js"></script>
 </body>
 </html>
